--- a/indeks.html
+++ b/indeks.html
@@ -11,18 +11,16 @@
 
 <body>
 
-    <h1 id="kolorowe">Lista zgłoszeń</h1>
+	<h1 id="naglowek">Lista zgłoszeń</h1>
 	<p class="ramka">	
-	<input class="wiek" type="wiek" placeholder="Ile masz lat?"><br>
-	<input class="imie" type="imie" placeholder="Jak masz na imię?" value="imie"><br>
-	<button type="przycisk" id="przycisk">Wyślij</button>
-             
+	<input id= "wiek" class="wiek" type="wiek" placeholder="Ile masz lat?"><br>
+	<input id="imie" class="imie" type="imie" placeholder="Jak masz na imię?"><br>
+	<button id= "przycisk" type="przycisk">Wyślij</button>
 	
 	</p>
 	
-	<ol class="lista">
-		<li></li>
-		<li></li>
+	<ol id="lista" class="lista">
+		
 	</ol>
 	
 	
